# TableSense2

./: .gitignore  README.md  __init__.py  contributing.md  environment.yml  license.md  notice.md  pyproject.toml  requirements.txt
configs/: detector_config.yaml  detector_config_minimal.yaml  detector_config_vertex_ai.yaml  sweep_config.yaml
data_io/: __init__.py  annotations.py
docs/: Finalized Cell Features.md  architecture.md  detr_visualization_thresholds.md  experiment_tracking.md  preprocess_tablesense_files.md  setup.md  training_data.md  wandb_integration.md
evaluation/: evaluator.py  hungarian_evaluator.py  metrics.py
features/: __init__.py  color_bucketing.py  featurizer.py
inference/: __init__.py
models/: __init__.py  table_detector.py
models/backbone/: __init__.py  blocks.py  encoder.py  stem.py
scripts/: check_problematic_files.py  evaluate_detector.py  launch_sweep.py  train_detector.py
tests/: README.md  __init__.py  conftest.py  test_annotations.py  test_backbone.py  test_color_bucketing.py  test_config.py  test_detector_forward.py  test_detr.py  test_detr_loss.py  test_evaluator.py  test_excel_utils.py  test_featurizer.py  test_featurizer_sample_tables_integration.py  test_hungarian_matcher.py  test_metrics.py  test_trainer_detr_losses.py
training/: __init__.py  config.py  experiment_logger.py  trainer.py  visualization_selector.py
utils/: README.md  detect_excel_tables.py  excel_utils.py  preprocess_tablesense_files.py  visualize_color_buckets.py  vizualize_gt_excel.py
vertex_ai/: Dockerfile  README.md  submit_training.sh
(+14 files in other folders)
